[gd_scene load_steps=15 format=2]

[ext_resource path="res://Bilder/UI/Maps/frame_blue.png" type="Texture" id=1]
[ext_resource path="res://Bilder/UI/Maps/frame_red.png" type="Texture" id=2]
[ext_resource path="res://Bilder/Effects/orange.png" type="Texture" id=3]
[ext_resource path="res://UI/MapButton.gd" type="Script" id=4]
[ext_resource path="res://Bilder/Effects/blue.png" type="Texture" id=5]
[ext_resource path="res://UI/Font.tres" type="DynamicFont" id=6]

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.151685, 1 ), 0.809091, 0.809091, 0, 0, Vector2( 1, 0 ), -3.37914, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 30, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 24.05
scale = 10.0
scale_random = 1.0
scale_curve = SubResource( 3 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "loop"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 2.3, 5.91864, 1268.99, -0.3, -107.735, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 1, -0.00271171, 1e-05, -1, 0.997278, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 1, -0.00271171, 1e-05, -1, 0.987168, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}

[node name="Map" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 4 )

[node name="ParticlesExited" type="Particles2D" parent="."]
material = SubResource( 4 )
emitting = false
amount = 50
process_material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="ParticlesNormal" type="Particles2D" parent="."]
material = SubResource( 5 )
position = Vector2( 0, -3 )
amount = 5
process_material = SubResource( 1 )
texture = ExtResource( 5 )

[node name="BallDetector" type="Area2D" parent="."]
z_index = -1
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallDetector"]
shape = SubResource( 6 )

[node name="ScaleBuffer" type="Node2D" parent="."]

[node name="FrameRed" type="Sprite" parent="ScaleBuffer"]
visible = false
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScaleBuffer/FrameRed"]
anims/RESET = SubResource( 8 )
anims/loop = SubResource( 7 )

[node name="FrameBlue" type="Sprite" parent="ScaleBuffer"]
modulate = Color( 1, 1, 1, 0.780392 )
z_index = -1
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -10.0
margin_top = -10.0
margin_right = 57.0
margin_bottom = 57.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = ExtResource( 6 )
text = "Normal"
align = 1
valign = 1

[connection signal="body_entered" from="BallDetector" to="." method="_on_BallDetector_body_entered"]
[connection signal="body_exited" from="BallDetector" to="." method="_on_BallDetector_body_exited"]
